Add new gif which works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <li><a href="recipes/pizza.html" target="_blank">Recipe for Pizza</a></li>
         </ul>
 
-        <img src="images.html/cozinhando-igor.gif">
+        <img src="gojocamebackfr.gif" alt="a gif of cooking animated">
     </body>
 </html>
